Renamed to Koala, Prettier + ESLint, unified headings

--- a/website/pages/about.html
+++ b/website/pages/about.html
@@ -1,7 +1,8 @@
-<h1>About</h1>
+<!-- title: About -->
+<!-- date: 2020-05-20 10:45:00 -->
 <p>
   The project aims to create simple to use, scalable and fast static website generator.
 </p>
 <p>
-  More info at <a href="https://github.com/KoalaSpace/koalaspace">GitHub</a>
+  More info at <a href="https://github.com/KoalaSpace/koala">GitHub</a>
 </p>
