--- a/test/resources/render_theme/index.html
+++ b/test/resources/render_theme/index.html
@@ -1,1 +1,1 @@
-{{title}}|{{pageTitle}}|{{#each menu}}{{title}}{{/each}}|{{#each posts}}{{title}}_{{/each}}|{{#with page}}{{title}}{{/with}}
+{{title}}|{{pageTitle}}|{{#each menu}}{{title}}{{/each}}|{{#with content.post}}{{title}}{{/with}}
